@@ -1,5 +1,8 @@
 2004-02-18  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* contrib/ogdi_info/ogdi_info.c: use ecs_CleanUp() to free contents
+	of result from cln_DestroyClient().  Minor memory leak. 
+
 	* vpflib/strfunc.c: leftjust() - avoid use of strcpy() for overlapping
 	string moves.  Reported by Craig Bruce, verified with valgrind. 
 
